--- a/ormconfig.json
+++ b/ormconfig.json
@@ -4,5 +4,12 @@
   "port": 5432,
   "username": "postgres",
   "password": "docker",
-  "database": "apisales"
+  "database": "apisales",
+  "entities": ["./src/modules/**/typeorm/entities/*.ts"],
+  "migrations": [
+    "./src/shared/typeorm/migrations/*.ts"
+  ],
+  "cli": {
+    "migrationsDir": "./src/shared/typeorm/migrations"
+  }
 }
